# quarkengine

./: CMakeLists.txt  README.md  camera.c  camera.h  directional_light.c  directional_light.h  light.frag  light.vert  main.c  mat3.c  mat3.h  mat4.c  mat4.h  material.c  material.h  object.c  object.frag  object.h  object.vert  point_light.c  point_light.h  prefab.c  prefab.h  scene.c  scene.h  shader.c  shader.h  shape.c  shape.h  spotlight.c  spotlight.h  vec3.c  vec3.h  vec4.c  vec4.h  window.c  window.h
